--- a/house-clean.html
+++ b/house-clean.html
@@ -71,6 +71,7 @@
         <h2>Blinds</h2>
         <ul>
             <li>6ft blinds must be sprayed and rinsed outside on line</li>
+            <li>3ft blinds can be washed in bath</li>
         </ul>
         <table class="blinds">
             <thead>
@@ -150,7 +151,7 @@
             <li>Spray mould patches with bleach on both sides of lining</li>
             <li>Leave bleach for 10-15 mins</li>
             <li>Rinse whole curtain with warm water</li>
-            <li>Wash curtains at 30&deg;C on handwash or synthetic for longer wash</li>
+            <li>Wash curtains at 30&deg;C on cottons wash</li>
         </ol>
         <table class="curtains mt-3">
             <thead>
@@ -165,10 +166,10 @@
                 <tr>
                     <td class="subheading" colspan="3">Downstairs</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Dining room patio doors</td>
-                    <td class="todo">-</td>
-                    <td></td>
+                    <td>May 2023</td>
+                    <td>Lots of mould throughout</td>
                 </tr>
                 <tr class="cleaned">
                     <td>Dining room side window</td>
