--- a/house-clean.html
+++ b/house-clean.html
@@ -189,10 +189,10 @@
                 <tr>
                     <td class="subheading" colspan="3">Upstairs</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Bedroom D</td>
-                    <td>Mar 2023</td>
-                    <td>Mould spots at bottom of lining</td>
+                    <td>May 2023</td>
+                    <td>Minor mould spots at bottom of lining</td>
                 </tr>
                 <tr class="cleaned">
                     <td>Bedroom J</td>
@@ -214,7 +214,7 @@
 
         <h3 class="mt-3">Drying curtains</h3>
         <ul>
-            <li>hang sideways to dry</li>
+            <li>Hang sideways to dry</li>
         </ul>
         <img src="images/curtains1.jpg" />
 
