--- a/house-clean.html
+++ b/house-clean.html
@@ -87,12 +87,12 @@
                 <tr>
                     <td class="subheading" colspan="5">Downstairs</td>
                 </tr>
-                <tr class="todo">
+                <tr class="cleaned">
                     <td>Utility</td>
                     <td>3</td>
                     <td>-</td>
-                    <td>Feb 2022</td>
-                    <td>Minor mould patches</td>
+                    <td>May 2023</td>
+                    <td>Minor mould patches halfway up</td>
                 </tr>
                 <tr class="todo">
                     <td>Kitchen</td>
