--- a/house-clean.html
+++ b/house-clean.html
@@ -151,7 +151,12 @@
             <li>Spray mould patches with bleach on both sides of lining</li>
             <li>Leave bleach for 10-15 mins</li>
             <li>Rinse whole curtain with warm water</li>
-            <li>Wash curtains at 30&deg;C on cottons wash</li>
+            <li>Wash curtains at 30&deg;C on
+                <ul>
+                    <li>Handwash if has blackout lining</li>
+                    <li>Cottons if not</li>
+                </ul>
+            </li>
         </ol>
         <table class="curtains mt-3">
             <thead>
