--- a/house-clean.html
+++ b/house-clean.html
@@ -63,6 +63,7 @@
         <h3>Bathroom</h3>
         <ul>
             <li class="todo">Feb 2022 whole room bleached and ceiling repainted</li>
+            <li class="todo">May 2023 shower screen taken apart cleaned and repaired</li>
         </ul>
 
         <hr class="mt-5">
