--- a/house-clean.html
+++ b/house-clean.html
@@ -41,7 +41,7 @@
         <ul>
             <li class="cleaned">May 2023 mould around living room windows &amp; on walls</li>
             <li class="cleaned">Apr 2023 mould behind sideboard &amp; TV</li>
-            <li class="todo">Apr 2022 behind sofas</li>
+            <li class="cleaned">Jun 2023 behind sofas</li>
         </ul>
         <h3>Kitchen</h3>
         <ul>
