--- a/house-clean.html
+++ b/house-clean.html
@@ -26,15 +26,15 @@
         <h2>Cleaning</h2>
         <h3>Utility room</h3>
         <ul>
-            <li class="todo">Mar 2022 mould in cupboard</li>
+            <li class="cleaned">Jun 2023 mould at back of cupboard</li>
             <li class="cleaned">May 2023 mould behind and under shoe racks and dryer</li>
-            <li class="todo">Shower room</li>
+            <li class="cleaned">Jun 2023 shower room, mould on surfaces, shelves painted</li>
         </ul>
         <h3>Dining room</h3>
         <ul>
-            <li class="todo">Feb 2022 mould above window and on ceiling</li>
+            <li class="cleaned">Apr 2023 mould above window and on ceiling</li>
             <li class="todo">Feb 2022 behind outer wall bookshelves</li>
-            <li class="todo">Feb 2022 mould on patio doors</li>
+            <li class="cleaned">Apr 2023 mould on patio doors</li>
             <li class="todo">Apr 2022 behind inner wall bookshelves</li>
         </ul>
         <h3>Living room</h3>
@@ -63,7 +63,7 @@
         <h3>Bathroom</h3>
         <ul>
             <li class="todo">Feb 2022 whole room bleached and ceiling repainted</li>
-            <li class="todo">May 2023 shower screen taken apart cleaned and repaired</li>
+            <li class="cleaned">May 2023 shower screen taken apart cleaned and repaired</li>
         </ul>
 
         <hr class="mt-5">
