--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>Garden</h1>
 
         <ul>
-            <li><a href="seasons.html">Seasons</a></li>
-            <li><a href="year.html">Year</a></li>
+            <li><a href="seasons.html">Seasons &amp; temperatures</a></li>
+            <li><a href="year.html">Annual tasks</a></li>
             <li><a href="wild-flowers.html">Wild flowers</a></li>
             <li><a href="various.html">Various</a></li>
             <li><a href="house-clean.html">House clean</a></li>
