--- a/year.html
+++ b/year.html
@@ -16,71 +16,72 @@
         <!-- Jan -->
         <h2 class="season-winter">Jan - mid winter</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />weeding & tidying</li>
-            <li><input type="checkbox" checked />fill spare water butt</li>
+            <!-- <li><input type="checkbox"/>weeding & tidying</li> -->
+            <li><input type="checkbox" />weeding & tidying</li>
+            <li><input type="checkbox" />fill spare water butt</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Trees</li>
+            <li><input type="checkbox" />Trees</li>
         </ul>
 
         <!-- Feb -->
         <h2 class="season-winter">Feb - late winter</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />weeding & tidying</li>
-            <li><input type="checkbox" checked />mulch raised beds</li>
+            <li><input type="checkbox" />weeding & tidying</li>
+            <li><input type="checkbox" />mulch raised beds</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Cistus</li>
-            <li><input type="checkbox" checked />Cotinus</li>
-            <li><input type="checkbox" checked />Elder</li>
-            <li><input type="checkbox" checked />Hawthorn</li>
-            <li><input type="checkbox" checked />Lonicera</li>
-            <li><input type="checkbox" checked />Roses</li>
+            <li><input type="checkbox" />Cistus</li>
+            <li><input type="checkbox" />Cotinus</li>
+            <li><input type="checkbox" />Elder</li>
+            <li><input type="checkbox" />Hawthorn</li>
+            <li><input type="checkbox" />Lonicera</li>
+            <li><input type="checkbox" />Roses</li>
         </ul>
 
         <!-- Mar -->
         <h2 class="season-spring">Mar - early spring</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />mow lawn</li>
-            <li><input type="checkbox" checked />mulch Rhubarb</li>
-            <li><input type="checkbox" checked />mulch &amp; move strawberries</li>
+            <li><input type="checkbox" />mow lawn</li>
+            <li><input type="checkbox" />mulch Rhubarb</li>
+            <li><input type="checkbox" />mulch &amp; move strawberries</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Buddliea</li>
-            <li><input type="checkbox" checked />Berberis</li>
-            <li><input type="checkbox" checked />Hebe</li>
-            <li><input type="checkbox" checked />Hypericum</li>
-            <li><input type="checkbox" checked />Lavender</li>
-            <li><input type="checkbox" checked />Sage</li>
+            <li><input type="checkbox" />Buddliea</li>
+            <li><input type="checkbox" />Berberis</li>
+            <li><input type="checkbox" />Hebe</li>
+            <li><input type="checkbox" />Hypericum</li>
+            <li><input type="checkbox" />Lavender</li>
+            <li><input type="checkbox" />Sage</li>
         </ul>
         <h3>Move</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Snowdrops</li>
-            <li><input type="checkbox" checked />Asters</li>
+            <li><input type="checkbox" />Snowdrops</li>
+            <li><input type="checkbox" />Asters</li>
         </ul>
 
         <!-- Apr -->
         <h2 class="season-spring">Apr - mid spring</h2>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />mulch &amp; move raspberries</li>
+            <li><input type="checkbox" />mulch &amp; move raspberries</li>
         </ul>
         <h3>Sew</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Chives</li>
-            <li><input type="checkbox" checked />Parsely</li>
-            <li><input type="checkbox" checked />Dill</li>
-            <li><input type="checkbox" checked />Rocket</li>
+            <li><input type="checkbox" />Chives</li>
+            <li><input type="checkbox" />Parsely</li>
+            <li><input type="checkbox" />Dill</li>
+            <li><input type="checkbox" />Rocket</li>
         </ul>
         <h3>Plant</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Mint</li>
+            <li><input type="checkbox" />Mint</li>
         </ul>
         <h3>Prune</h3>
         <ul class="no-dots">
-            <li><input type="checkbox" checked />Rosemary</li>
+            <li><input type="checkbox" />Rosemary</li>
         </ul>
 
         <!-- Jun -->
