--- a/chives.html
+++ b/chives.html
@@ -16,11 +16,13 @@
         <h2>Planting</h2>
         <ul>
             <li>Sew Mar-Jun</li>
+            <li>Go dormant below 4&deg;C</li>
+            <li>Ok up to 29c</li>
         </ul>
 
         <h2>Harvest</h2>
         <ul>
-            <li>cut leaves with scissors snipping close to the base</li>
+            <li>Cut leaves with scissors snipping close to the base</li>
         </ul>
 
         <h2>2022 Apr</h2>
